--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1, minimum-scale=1, user-scalable=no"
     />
-    <link rel="stylesheet" href="/components/umi.css" />
+    <link rel="stylesheet" href="/Components/umi.css" />
     <script>
-      window.routerBase = "/components/";
+      window.routerBase = "/Components/";
     </script>
     <script>
       //! umi version: 3.2.24
@@ -17,6 +17,6 @@
   <body>
     <div id="root"></div>
 
-    <script src="/components/umi.js"></script>
+    <script src="/Components/umi.js"></script>
   </body>
 </html>
